working on react-spring

--- a/Layout/Footer/Footer.module.scss
+++ b/Layout/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #292929;
+  // background: #292929;
   height: auto;
   flex-grow: 0;
 }
@@ -16,7 +16,7 @@
 }
 
 .copyright {
-  font-family: "Manrope";
+  font-family: 'Manrope';
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
