working on layout

--- a/Layout/Footer/Footer.module.scss
+++ b/Layout/Footer/Footer.module.scss
@@ -6,13 +6,14 @@
 
 .footerContainer {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1560px;
+  padding: 1.68em 16.25em;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 20px 0;
+  // padding: 20px 0;
 }
 
 .copyright {
