--- a/components/Windows/WindowFooter/WindowFooter.module.scss
+++ b/components/Windows/WindowFooter/WindowFooter.module.scss
@@ -1,7 +1,8 @@
 .footer {
-  // height: 100vh;
-  // width: 100vw;
-  background-color: #18233a;
+  height: 100vh;
+  width: 100vw;
+
+  color: rgba(255, 255, 255, 0.35);
   // background: $dark-background;
   background-image: url(https://assets.website-files.com/5f4c400…/5f4c42f…_noise-ani23.gif);
   background-position: 0px 0px;
