--- a/components/Windows/windowFirst/WindowFirst.module.scss
+++ b/components/Windows/windowFirst/WindowFirst.module.scss
@@ -1,11 +1,18 @@
 .window {
   max-height: 100vh;
   width: 100vw;
-  background-color: #18233a;
+  background-color: #fff;
   position: relative;
+
+  // new
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: yellow;
 }
 
 .windowBody {
+  max-width: 1560px;
 }
 
 .header {
@@ -16,7 +23,7 @@
   z-index: 1;
   height: auto;
   flex-grow: 0;
-  backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
 }
 
 .window {
@@ -52,5 +59,5 @@
   left: 0;
 
   background: transparent;
-  backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
 }
