--- a/components/Windows/windowFirst/WindowFirst.module.scss
+++ b/components/Windows/windowFirst/WindowFirst.module.scss
@@ -8,11 +8,22 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-color: yellow;
+  background-color: black;
+  z-index: 3;
 }
 
 .windowBody {
+  width: 100%;
   max-width: 1560px;
+  padding: 1.68em 16.25em;
+  margin: 0 auto;
+  margin-top: 30vh;
+}
+
+.title {
+  font-size: 56px;
+  color: #fff;
+  font-weight: 400;
 }
 
 .header {
