--- a/components/Windows/Cases/Cases.module.scss
+++ b/components/Windows/Cases/Cases.module.scss
@@ -1,3 +1,17 @@
+.container {
+  width: 100%;
+  width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
+}
+
+.navigation {
+  position: fixed;
+  top: 120px;
+  left: 200px;
+}
+
 .cases {
   height: 100vh;
   width: 100vw;
