--- a/components/Windows/windowFirst/WindowFirst.module.scss
+++ b/components/Windows/windowFirst/WindowFirst.module.scss
@@ -28,13 +28,15 @@
 
 .header {
   position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
   z-index: 1;
   height: auto;
   flex-grow: 0;
-  // backdrop-filter: blur(5px);
+  background-color: rgba($color: #000000, $alpha: 0.1);
+  backdrop-filter: blur(5px);
 }
 
 .window {
