--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,3 +5,22 @@
   //   width: 100%;
   //   z-index: 1;
 }
+
+.header {
+  position: absolute;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 5;
+  height: auto;
+  flex-grow: 0;
+  // background-color: rgba($color: #000000, $alpha: 0.1);
+  // backdrop-filter: blur(5px);
+}
+
+.header.scrolled {
+  background-color: #282828;
+  background-color: rgba($color: #282828, $alpha: 0.9);
+  backdrop-filter: blur(5px);
+}
