--- a/Layout/Header/Header.module.scss
+++ b/Layout/Header/Header.module.scss
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.68em 16.25em;
-  padding-top: 60px;
+  // padding-top: 60px;
 }
 
 .headerLink {
