--- a/components/Windows/windowFirst/WindowFirst.module.scss
+++ b/components/Windows/windowFirst/WindowFirst.module.scss
@@ -64,12 +64,15 @@
   height: 100%;
 }
 
-.windowFooter {
+.scroll {
+  display: flex;
+  justify-content: center;
   position: absolute;
   top: auto;
   right: 0;
-  bottom: 0;
+  bottom: 80px;
   left: 0;
+  color: #fff;
 
   background: transparent;
   // backdrop-filter: blur(5px);
