--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,11 @@
 
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  transition: 0.4s ease;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 html {
@@ -18,13 +23,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 $dark-background: #282828;
